[workspace]
resolver = "2"
members = ["crates/keyroh-cli", "crates/keyroh-core", "crates/keyroh-tui"]

[workspace.dependencies]
chrono = "0.4.38"
keyroh-core = { path = "crates/keyroh-core" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.52.3", features = ["full"] }
