[package]
name = "keyroh-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["zeroize"] }
chrono = "0.4.38"
hex = "0.4.3"
iroh = "1.0.0"
iroh-blobs = "0.103.0"
iroh-docs = "0.101.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.128"
tokio = { workspace = true }
totp-rs = {
  version = "5.5",
  default-features = false,
  features = ["otpauth", "zeroize"]
}
uuid = { version = "1.10.0", features = ["serde", "v4"] }
zeroize = "1.9.0"
