[package]
name = "keyroh-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["zeroize"] }
base64 = "0.22"
bytes = "1.9.0"
cbc = { version = "0.1", features = ["alloc"] }
chrono = "0.4.38"
futures = "0.3.31"
hex = "0.4.3"
hkdf = "0.12"
hmac = { version = "0.12", features = ["reset"] }
iroh = "1.0.0"
iroh-blobs = "0.103.0"
iroh-docs = "0.101.0"
iroh-gossip = "0.101.0"
keyring = "4.1.2"
libc = "0.2"
# Bitwarden import — AES-256-CBC + HMAC-SHA256 + PBKDF2 + HKDF
pbkdf2 = { version = "0.12", features = ["hmac"] }
rand = "0.10.1"
rmp-serde = "1.3"
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = { workspace = true }
sha2 = "0.10"
tempfile = "3.12.0"
tokio = { workspace = true }
totp-rs = {
  version = "5.5",
  default-features = false,
  features = ["otpauth", "zeroize"]
}
uuid = { version = "1.10.0", features = ["serde", "v4"] }
zeroize = "1.9.0"
