[package]
name = "keyroh-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
keyroh-core = { path = "../keyroh-core" }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.102"
futures = "0.3"
arboard = "3"
rpassword = "7.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.128"
chrono = "0.4.38"
